<resources>
    <string name="app_name">Caffeine AfterBurn</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="WelSplash">Welcome to Caffeine Afterburn!</string>
    <string name="WelWrite">This app is designed to show how much time caffeine will take to enter your blood stream, how long the
    caffeine is in your bloodstream and the half-life of the caffeine.</string>
    <string name="EULA">EULA</string>
    <string name="LongEula">EULA Goes here.....need to figure this out.....</string>
    <string name="AcceptRadial">I agree and accept the EULA</string>
    <string name="Accept">Accept</string>
    <string name="Decline">Decline</string>
    <string name="title_activity_choose_your_level">ChooseYourLevel</string>

    <string name="ChooseLVL">Choose A level</string>
    <string name="Please">Please choose your level of caffeine tolerance.</string>

    <string name="Hyper">Hyper Sensativaty</string>
    <string name="Normal">Normal Sensativity</string>
    <string name="Hypo">Hypo Sensativity</string>

    <string name="Change">You can always change your caffeine level from the menu.</string>


</resources>
