<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartPage">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/WelSplash"
        android:id="@+id/WelcomeSplash"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/WelWrite"
        android:id="@+id/TextWelcome"
        android:layout_below="@+id/WelcomeSplash"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:singleLine="false"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EULA"
        android:id="@+id/textView"
        android:layout_below="@+id/TextWelcome"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/LongEula"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/TextWelcome"
        android:paddingTop="20dp"
        android:longClickable="false"
        android:nestedScrollingEnabled="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AcceptRadial"
        android:id="@+id/AcceptRadio"
        android:textSize="25dp"
        android:clickable="true"
        android:layout_above="@+id/Accept"
        android:layout_alignParentStart="true"
        android:onClick="onClick1"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Accept"
        android:id="@+id/Accept"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView"
        android:visibility="visible"
        android:clickable="true"
        android:onClick="onClick10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Decline"
        android:id="@+id/Decline"
        android:layout_alignBottom="@+id/Accept"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView"
        android:clickable="true"
        android:visibility="visible"
        android:layout_alignTop="@+id/Accept" />

</RelativeLayout>
